--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.android.support:design:26.1.0'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.android.support:appcompat-v7:26.1.0' // appcompat library
     compile 'com.android.support:design:26.1.0'
+
+    compile "com.squareup.picasso:picasso:2.4.0"
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
