--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.diaryofsecrets">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
     <application
+        android:hardwareAccelerated="false"
         android:allowBackup="true"
         android:name=".MyApplication"
         android:icon="@mipmap/ic_launcher"
@@ -15,7 +18,7 @@
         android:theme="@style/DefaultTheme">
         <activity
             android:name=".SplashScreen"
-            android:label="@string/diaryOfSecrets"
+            android:label="@string/app_name"
             android:screenOrientation="locked"
             android:theme="@android:style/Theme.Black.NoTitleBar"
             android:windowSoftInputMode="adjustPan">
@@ -45,7 +48,9 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".AppLockScreenActivity"></activity>
+        <activity android:name=".AppLockScreenActivity"
+            android:noHistory="true"/>
+
     </application>
 
 </manifest>
